syntax = "proto3";

package kessel.inventory.v1beta1;

option go_package = "github.com/project-kessel/inventory-api/api/kessel/inventory/v1beta1";
option java_multiple_files = true;
option java_package = "org.project_kessel.api.inventory.v1beta1";
option java_outer_classname = "UpdateResourceRelationshipByUrnHsResourcesParameterProto";

message UpdateResourceRelationshipByUrnHsResourcesParameter {

  string subject_resource = 19549760;

  string object_resource = 254445841;
}
